--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -15,6 +15,7 @@
     "@ignite-ui/eslint-config": "*",
     "@ignite-ui/react": "*",
     "@ignite-ui/tokens": "*",
+    "phosphor-react": "^1.4.1",
     "polished": "^4.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
