--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -19,7 +19,10 @@ jobs:
 
       - run: npm ci
 
-      - run: npm run build-storybook
+      - run: npm run build
+      
+      - working-directory: .packages/docs
+        run: npm run build-storybook
 
       - name: Deploy storybook
         working-directory: .packages/docs
