--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -21,11 +21,12 @@ jobs:
 
       - run: npm run build
       
-      - working-directory: .packages/docs
+      - name: Build storybook
+        working-directory: ./packages/docs
         run: npm run build-storybook
 
       - name: Deploy storybook
-        working-directory: .packages/docs
+        working-directory: ./packages/docs
         run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
