--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,10 +23,7 @@ jobs:
       
       - name: Build storybook
         working-directory: ./packages/docs
-        run: npm run deploy-storybook
-
-      - working-directory: ./packages/docs
-        run: touch storybook-static/.nojekyll 
+        run: npm run build-storybook && touch storybook-static/.nojekyll 
 
       - name: Deploy storybook
         working-directory: ./packages/docs
