--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,9 +13,9 @@
     "deploy-storybook": "storybook-to-ghpages"
   },
   "dependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*",
+    "@mystudy-ui/eslint-config": "*",
+    "@mystudy-ui/react": "*",
+    "@mystudy-ui/tokens": "*",
     "@storybook/storybook-deployer": "^2.8.16",
     "phosphor-react": "^1.4.1",
     "polished": "^4.3.1",
