--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "turbo run lint",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build --filter=!docs && changeset publish"
+    "release": "turbo run build --filter=!@mystudy-ui/docs && changeset publish"
   },
   "packageManager": "npm@10.8.1",
   "name": "with-vite",
